--- a/public/todo/index.html
+++ b/public/todo/index.html
@@ -123,7 +123,7 @@
       please wait...
     </div>
   </div>
-
+  <button onclick="aboutMe()" class="aboutMe">Me</button>
   <script src="../srcipt/script.js"></script>
 </body>
 
